# colm

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  module.rs  traits.rs
tests/: aes128-colm0.rs
tests/aead/: mod.rs  openssl.rs
